# AI-Trainer

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LLM_INTEGRATION_GUIDE.md  README.md  camera.py  camera_llm_bridge.py  filters.py  frame_capture.py  fsm.py  geometry.py  mimo_test.py  overlay.py  pyproject.toml  report_generator.py  requirements.txt  test_llm_integration.py  view_classifier.py
.github/workflows/: test.yml
algorithms/: __init__.py
algorithms/validators/: __init__.py  squat_validator.py
backend/: ARCHITECTURE.md  config.py  main.py  requirements.txt
backend/ai/: __init__.py  agent.py  llm_client.py  prompts.py  safety.py  tools.py
backend/api/: __init__.py  auth.py  dashboard.py  movement.py  pose_ws.py  profile.py  routes.py  workout.py
backend/core/: deps.py  security.py
backend/data/: movements_seed.json
backend/db/: __init__.py  session.py
backend/models/: __init__.py  knowledge.py  movement.py  plan.py  profile.py  user.py  workout.py
backend/rag/: __init__.py
backend/schemas/: auth.py  movement.py  profile.py
configs/: movement_rules.json  movement_standards.json
docs/: frame_capture_guide.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/scripts/: start-dev.mjs
reports/: calibration_report.json
scripts/: calibrate_thresholds.py  download_datasets.py  init_db.py  replace_non_ascii.py  start_dev.ps1  start_web.ps1  stop_web.ps1  translations.json
tests/: conftest.py  test_filters.py  test_fsm.py  test_geometry.py  test_squat_validator.py
(+34 files in other folders)
