[project]
name = "cyber-trainer"
version = "0.1.0"
description = "AI-powered fitness personal trainer with real-time pose analysis"
requires-python = ">=3.10"
dependencies = [
    # Algorithm / CV
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyttsx3>=2.90",
    # Backend
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "algorithms"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
